test : add health check endpoint

--- a/.github/workflows/docker-image-ci.yml
+++ b/.github/workflows/docker-image-ci.yml
@@ -2,7 +2,7 @@ name: '[PROD] Docker Image CI'
 
 on:
   push:
-    branches: ['develop']
+    branches: ['main', 'develop']
 
 env:
   AWS_REGION: ap-northeast-2
