--- a/.github/workflows/filter-image-build.yml
+++ b/.github/workflows/filter-image-build.yml
@@ -1,4 +1,4 @@
-name: '[build] trigger docker image build'
+name: '[BUILD] trigger docker image build'
 on: [push]
 
 jobs:
@@ -22,5 +22,6 @@ jobs:
     steps:
       - name: check ${{ matrix.environment }}
         run: |
-          if[$CURRENT_BRANCH == $TARGET_BRANCH];then
+          if [ "$CURRENT_BRANCH" == "$TARGET_BRANCH" ]; then
             echo "$CURRENT_BRANCH $TARGET_BRANCH trigger build"
+          fi
