--- a/.github/workflows/docker-image-ci.yml
+++ b/.github/workflows/docker-image-ci.yml
@@ -1,13 +1,21 @@
 name: '[BUILD] Docker Image CI'
 
 on:
-  push:
-    branches: ['main', 'develop']
+  workflow_dispatch:
+    inputs:
+      phase:
+        description: 'Build Phase'
+        required: true
+        default: 'develop'
+        type: choice
+        options:
+          - develop
+          - production
 
 env:
   AWS_REGION: ap-northeast-2
   ECR_REPOSITORY: kharacter
-  IMAGE_NAME: ${{ github.ref == 'refs/heads/main' && 'prod' || 'dev' }}
+  IMAGE_NAME: ${{ inputs.phase == 'proudction' && 'prod' || 'dev' }}
 
 jobs:
   build:
