--- a/.github/workflows/filter-image-build.yml
+++ b/.github/workflows/filter-image-build.yml
@@ -1,6 +1,12 @@
 name: '[BUILD] trigger docker image build'
 on: [push]
 
+env:
+  REPO_OWNER: dev-novela
+  REPO: ci-cd-test
+  TARGET_WORK_FLOW_FILE: docker-image-ci.yml
+  GITHUB_SECRET: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   check-variable:
     runs-on: ubuntu-latest
@@ -17,17 +23,24 @@ jobs:
       matrix:
         environment: [production, develop]
     env:
+      PHASE: ${{ matrix.environment }}
       CURRENT_BRANCH: ${{ github.ref_name }}
     steps:
-      - name: set TARGET_BRANCH based on ${{ matrix.environment }}
+      - name: set TARGET_BRANCH based on ${{ env.PHASE }}
         run: |
-          if [ "${{ matrix.environment }}" == "production" ]; then
+          if [ "${{ env.PHASE }}" == "production" ]; then
             echo "TARGET_BRANCH=main" >> $GITHUB_ENV
-          elif [ "${{ matrix.environment }}" == "develop" ]; then
+          elif [ "${{ env.PHASE }}" == "develop" ]; then
             echo "TARGET_BRANCH=develop" >> $GITHUB_ENV
           fi
-      - name: check ${{ matrix.environment }}
+      - name: trigger docker build ${{ env.PHASE }}
         run: |
           if [ "$CURRENT_BRANCH" == "$TARGET_BRANCH" ]; then
-            echo "$CURRENT_BRANCH $TARGET_BRANCH trigger build"
+            curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer $GITHUB_SECRET"\
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/$REPO_OWNER/$REPO/actions/workflows/$TARGET_WORK_FLOW_FILE/dispatches \
+            -d '{"ref":"topic-branch","inputs":{"phase":"$env.PHASE"}'
           fi
