--- a/.github/workflows/filter-image-build.yml
+++ b/.github/workflows/filter-image-build.yml
@@ -4,8 +4,8 @@ on: [push]
 env:
   REPO_OWNER: dev-novela
   REPO: ci-cd-test
-  TARGET_WORK_FLOW_FILE: docker-image-ci.yml
-  GITHUB_SECRET: ${{ secrets.GITHUB_TOKEN }}
+  TARGET_WORK_FLOW_FILE: 'docker-image-ci.yml'
+  GITHUB_SECRET: ${{ secrets.WORKFLOW_PAT }}
 
 jobs:
   check-variable:
@@ -26,6 +26,10 @@ jobs:
       PHASE: ${{ matrix.environment }}
       CURRENT_BRANCH: ${{ github.ref_name }}
     steps:
+      - uses: actions/checkout@v2
+        with:
+          ssh-key: '${{ secrets.COMMIT_KEY }}'
+
       - name: set TARGET_BRANCH based on ${{ env.PHASE }}
         run: |
           if [ "${{ env.PHASE }}" == "production" ]; then
@@ -36,11 +40,13 @@ jobs:
       - name: trigger docker build ${{ env.PHASE }}
         run: |
           if [ "$CURRENT_BRANCH" == "$TARGET_BRANCH" ]; then
+          echo "https://api.github.com/repos/$REPO_OWNER/$REPO/actions/workflows/$TARGET_WORK_FLOW_FILE/dispatches"
+          echo "{"ref":"$TARGET_BRANCH","inputs":{"phase":"$PHASE"}}"
             curl -L \
             -X POST \
             -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer $GITHUB_SECRET"\
+            -H "Authorization: Bearer $GITHUB_SECRET" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/$REPO_OWNER/$REPO/actions/workflows/$TARGET_WORK_FLOW_FILE/dispatches \
-            -d '{"ref":"topic-branch","inputs":{"phase":"$env.PHASE"}'
+            -d '{"ref":"$TARGET_BRANCH","inputs":{"phase":"$PHASE"}}'
           fi
