--- a/.github/workflows/filter-image-build.yml
+++ b/.github/workflows/filter-image-build.yml
@@ -48,5 +48,5 @@ jobs:
             -H "Authorization: Bearer $GITHUB_SECRET" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/$REPO_OWNER/$REPO/actions/workflows/$TARGET_WORK_FLOW_FILE/dispatches \
-            -d '{"ref":"$TARGET_BRANCH","inputs":{"phase":"$PHASE"}}'
+            -d "{\"ref\":\"$TARGET_BRANCH\",\"inputs\":{\"phase\":\"$PHASE\"}}"
           fi
