--- a/.github/workflows/filter-image-build.yml
+++ b/.github/workflows/filter-image-build.yml
@@ -1,4 +1,4 @@
-name: '[BUILD] Trigger docker image build'
+name: 'Trigger docker image build'
 on: [push]
 
 env:
@@ -22,27 +22,22 @@ jobs:
     strategy:
       matrix:
         environment: [prod, dev]
-    env:
-      PHASE: ${{ matrix.environment }}
-      CURRENT_BRANCH: ${{ github.ref_name }}
+    environment: ${{ matrix.environment }}
     steps:
       - uses: actions/checkout@v2
         with:
           ssh-key: '${{ secrets.COMMIT_KEY }}'
 
-      - name: set TARGET_BRANCH based on ${{ env.PHASE }}
-        run: echo "TARGET_BRANCH=${{ vars.TARGET_BRANCH }}" >> $GITHUB_ENV
-
-      - name: trigger docker build ${{ env.PHASE }}
+      - name: trigger docker build ${{ matrix.environment }}
         run: |
-          if [ "$CURRENT_BRANCH" == "$TARGET_BRANCH" ]; then
+          if [ "${{ github.ref_name }}" == "${{ vars.TARGET_BRANCH }}" ]; then
           echo "https://api.github.com/repos/$REPO_OWNER/$REPO/actions/workflows/$TARGET_WORK_FLOW_FILE/dispatches"
-          echo "{"ref":"$TARGET_BRANCH","inputs":{"phase":"$PHASE"}}"
+          echo "{"ref":"${{ vars.TARGET_BRANCH }}","inputs":{"phase":"${{ matrix.environment }}"}}"
             curl -L \
             -X POST \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer $GITHUB_SECRET" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/$REPO_OWNER/$REPO/actions/workflows/$TARGET_WORK_FLOW_FILE/dispatches \
-            -d "{\"ref\":\"$TARGET_BRANCH\",\"inputs\":{\"phase\":\"$PHASE\"}}"
+            -d "{\"ref\":\"${{ vars.TARGET_BRANCH }}\",\"inputs\":{\"phase\":\"${{ matrix.environment }}\"}}"
           fi
