--- a/.github/workflows/docker-image-ci.yml
+++ b/.github/workflows/docker-image-ci.yml
@@ -20,6 +20,7 @@ env:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    environment: ${{ inputs.phase }}
     env:
       PHASE: ${{ inputs.phase }}
     steps:
@@ -29,6 +30,12 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Create .env file
+        env:
+          SECRETS_CONTEXT: ${{ toJson(secrets) }}
+        run: |
+          jq -r 'to_entries|map("\(.key)=\(.value|tostring)")|.[]' <<< "$SECRETS_CONTEXT" > .env
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
