--- a/.github/workflows/ecs-deploy.yml
+++ b/.github/workflows/ecs-deploy.yml
@@ -15,13 +15,7 @@ on:
 env:
   AWS_REGION: ap-northeast-2
   ECR_REPOSITORY: kharacter
-  ECS_SERVICE: clonz-demo-svc
-  ECS_CLUSTER: clonz-demo-cluster
-  # set this to the path to your Amazon ECS task definition
-  # file, e.g. .aws/task-definition.json
   ECS_TASK_DEFINITION: 'deploy/${{ inputs.phase }}/task-definition.json'
-  # set this to the name of the container in the
-  # containerDefinitions section of your task definition
   CONTAINER_NAME: clonz-server-demo
 
 permissions:
@@ -32,6 +26,9 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     environment: ${{ inputs.phase }}
+    env:
+      ECS_CLUSTER: ${{ vars.ECS_CLUSTER }}
+      ECS_SERVICE: ${{ vars.ECS_SERVICE }}
 
     steps:
       - name: Checkout
