feat : 이전 빌드 진행 중일경우 취소

--- a/.github/workflows/ecs-deploy.yml
+++ b/.github/workflows/ecs-deploy.yml
@@ -12,6 +12,10 @@ on:
           - dev
           - prod
 
+concurrency:
+  group: ${{ github.workflow }}-${{ inputs.phase }}
+  cancel-in-progress: true
+
 env:
   AWS_REGION: ap-northeast-2
   ECR_REPOSITORY: kharacter
