--- a/.github/workflows/docker-image-ci.yml
+++ b/.github/workflows/docker-image-ci.yml
@@ -12,6 +12,10 @@ on:
           - dev
           - prod
 
+concurrency:
+  group: ${{ github.workflow }}-${{ inputs.phase }}
+  cancel-in-progress: true
+
 env:
   AWS_REGION: ap-northeast-2
   ECR_REPOSITORY: kharacter
@@ -64,3 +68,23 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_NAME
 
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+  trigger-deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ssh-key: '${{ secrets.COMMIT_KEY }}'
+
+      - name: trigger docker build ${{ matrix.environment }}
+        run: |
+          if [ "${{ github.ref_name }}" == "${{ vars.TARGET_BRANCH }}" ]; then
+          echo "https://api.github.com/repos/$REPO_OWNER/$REPO/actions/workflows/$TARGET_WORK_FLOW_FILE/dispatches"
+          echo "{"ref":"${{ vars.TARGET_BRANCH }}","inputs":{"phase":"${{ matrix.environment }}"}}"
+            curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer $GITHUB_SECRET" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/$REPO_OWNER/$REPO/actions/workflows/$TARGET_WORK_FLOW_FILE/dispatches \
+            -d "{\"ref\":\"${{ vars.TARGET_BRANCH }}\",\"inputs\":{\"phase\":\"${{ matrix.environment }}\"}}"
+          fi
