--- a/.github/workflows/docker-image-ci.yml
+++ b/.github/workflows/docker-image-ci.yml
@@ -20,6 +20,7 @@ env:
   AWS_REGION: ap-northeast-2
   ECR_REPOSITORY: kharacter
   IMAGE_NAME: ${{ inputs.phase }}
+  TARGET_WORK_FLOW_FILE: ecs-deploy.yml
 
 jobs:
   build-and-push:
@@ -69,22 +70,27 @@ jobs:
 
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
   trigger-deploy:
+    needs: build-and-push
     runs-on: ubuntu-latest
+    env:
+      REPO_OWNER: dev-novela
+      REPO: ci-cd-test
+      TARGET_WORK_FLOW_FILE: ecs-deploy.yml
+      GITHUB_SECRET: ${{ secrets.WORKFLOW_PAT }}
+
     steps:
       - uses: actions/checkout@v2
-        with:
-          ssh-key: '${{ secrets.COMMIT_KEY }}'
 
-      - name: trigger docker build ${{ matrix.environment }}
+      - name: trigger ecs deploy (dev)
         run: |
-          if [ "${{ github.ref_name }}" == "${{ vars.TARGET_BRANCH }}" ]; then
+          if [ "${{ inputs.phase }}" == "dev" ]; then
           echo "https://api.github.com/repos/$REPO_OWNER/$REPO/actions/workflows/$TARGET_WORK_FLOW_FILE/dispatches"
-          echo "{"ref":"${{ vars.TARGET_BRANCH }}","inputs":{"phase":"${{ matrix.environment }}"}}"
+          echo "{"ref":"${{ github.ref }}","inputs":{"phase":"dev"}}"
             curl -L \
             -X POST \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer $GITHUB_SECRET" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/$REPO_OWNER/$REPO/actions/workflows/$TARGET_WORK_FLOW_FILE/dispatches \
-            -d "{\"ref\":\"${{ vars.TARGET_BRANCH }}\",\"inputs\":{\"phase\":\"${{ matrix.environment }}\"}}"
+            -d "{\"ref\":\"${{ github.ref }}\",\"inputs\":{\"phase\":\"dev\"}}"
           fi
