--- a/.github/workflows/docker-image-ci.yml
+++ b/.github/workflows/docker-image-ci.yml
@@ -69,7 +69,8 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_NAME
 
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
-  trigger-deploy:
+  trigger-dev-deploy:
+    if: inputs.phase == 'dev'
     needs: build-and-push
     runs-on: ubuntu-latest
     env:
@@ -83,7 +84,6 @@ jobs:
 
       - name: trigger ecs deploy (dev)
         run: |
-          if [ "${{ inputs.phase }}" == "dev" ]; then
           echo "https://api.github.com/repos/$REPO_OWNER/$REPO/actions/workflows/$TARGET_WORK_FLOW_FILE/dispatches"
           echo "{"ref":"${{ github.ref }}","inputs":{"phase":"dev"}}"
             curl -L \
@@ -93,4 +93,3 @@ jobs:
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/$REPO_OWNER/$REPO/actions/workflows/$TARGET_WORK_FLOW_FILE/dispatches \
             -d "{\"ref\":\"${{ github.ref }}\",\"inputs\":{\"phase\":\"dev\"}}"
-          fi
