--- a/.github/workflows/ecs-deploy.yml
+++ b/.github/workflows/ecs-deploy.yml
@@ -13,7 +13,7 @@ on:
           - prod
 
 concurrency:
-  group: ${{ github.workflow }}-${{ inputs.phase }}
+  group: ${{ github.workflow }}-${{ github.event.inputs.phase }}
   cancel-in-progress: true
 
 env:
