--- a/.github/workflows/docker-image-ci.yml
+++ b/.github/workflows/docker-image-ci.yml
@@ -23,7 +23,7 @@ concurrency:
 
 env:
   AWS_REGION: ap-northeast-2
-  ECR_REPOSITORY: kharacter
+  ECR_REPOSITORY: ${{ vars.ECR_REPOSITORY }}
   IMAGE_PHASE_TAG: ${{ inputs.phase }}
   TARGET_WORK_FLOW_FILE: ecs-deploy.yml
 
@@ -81,8 +81,7 @@ jobs:
     needs: build-and-push
     runs-on: ubuntu-latest
     env:
-      REPO_OWNER: dev-novela
-      REPO: ci-cd-test
+      REPO: ${{ github.repository }}
       TARGET_WORK_FLOW_FILE: ecs-deploy.yml
       GITHUB_SECRET: ${{ secrets.WORKFLOW_PAT }}
 
@@ -91,12 +90,12 @@ jobs:
 
       - name: trigger ecs deploy (dev)
         run: |
-          echo "https://api.github.com/repos/$REPO_OWNER/$REPO/actions/workflows/$TARGET_WORK_FLOW_FILE/dispatches"
+          echo "https://api.github.com/repos/$REPO/actions/workflows/$TARGET_WORK_FLOW_FILE/dispatches"
           echo "{"ref":"${{ github.ref }}","inputs":{"phase":"dev"}}"
             curl -L \
             -X POST \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer $GITHUB_SECRET" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/$REPO_OWNER/$REPO/actions/workflows/$TARGET_WORK_FLOW_FILE/dispatches \
+            https://api.github.com/repos/$REPO/actions/workflows/$TARGET_WORK_FLOW_FILE/dispatches \
             -d "{\"ref\":\"${{ github.ref }}\",\"inputs\":{\"phase\":\"dev\"}}"
