--- a/.github/workflows/filter-image-build.yml
+++ b/.github/workflows/filter-image-build.yml
@@ -2,8 +2,7 @@ name: 'Trigger docker image build'
 on: [push]
 
 env:
-  REPO_OWNER: dev-novela
-  REPO: ci-cd-test
+  REPO: ${{ github.repository }}
   TARGET_WORK_FLOW_FILE: docker-image-ci.yml
   GITHUB_SECRET: ${{ secrets.WORKFLOW_PAT }}
 
@@ -27,13 +26,13 @@ jobs:
       - name: trigger docker build ${{ matrix.environment }}
         run: |
           if [ "${{ github.ref_name }}" == "${{ vars.TARGET_BRANCH }}" ]; then
-          echo "https://api.github.com/repos/$REPO_OWNER/$REPO/actions/workflows/$TARGET_WORK_FLOW_FILE/dispatches"
+          echo "https://api.github.com/repos/$REPO/actions/workflows/$TARGET_WORK_FLOW_FILE/dispatches"
           echo "{"ref":"${{ vars.TARGET_BRANCH }}","inputs":{"phase":"${{ matrix.environment }}"}}"
             curl -L \
             -X POST \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer $GITHUB_SECRET" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/$REPO_OWNER/$REPO/actions/workflows/$TARGET_WORK_FLOW_FILE/dispatches \
+            https://api.github.com/repos/$REPO/actions/workflows/$TARGET_WORK_FLOW_FILE/dispatches \
             -d "{\"ref\":\"${{ vars.TARGET_BRANCH }}\",\"inputs\":{\"phase\":\"${{ matrix.environment }}\"}}"
           fi
